--- a/menu-pizzamigo-english/web/desayuno.html
+++ b/menu-pizzamigo-english/web/desayuno.html
@@ -136,6 +136,35 @@
           <p class="text-center"> American for Two</p>
         </div>
       </div>
+      <div class="row mt-5">
+        <!-- precio licuados  -->
+        <div class="col-6 text-center marco p-3" style="font-size: 1.3rem;">OFFER SMOOTHIE 1L + 1 HAM & CHEESE GRILLED SANDWICH</div>
+        <div class="col-6 mt-5">
+          <span class="text-black text-center pp p-5" id="plicuados"></span>
+
+          <!-- <img class="precio" src="../2100.png" alt="2100" srcset=""> -->
+        </div>
+      </div>
+
+      <div class="row mt-5">
+        <!-- precio licuados  -->
+        <div class="col-6 mt-5">
+          <span class="text-black text-center pp p-5" id="pnaranja"></span>
+          
+          <!-- <img class="precio" src="../2100.png" alt="2100" srcset=""> -->
+        </div>
+        <div class="col-6 text-center marco p-3" style="font-size: 1.3rem;">ORANGE JUICE 1L + 1 HAM & CHEESE GRILLED SANDWICH</div>
+      </div>
+
+      <div class="row mt-5">
+        <!-- precio licuados  -->
+        <div class="col-6 text-center marco p-3" style="font-size: 1.3rem;">LEMONADE 1L + 1 HAM & CHEESE GRILLED SANDWICH</div>
+        <div class="col-6 mt-5">
+          <span class="text-black text-center pp p-5" id="plimonada"></span>
+
+          <!-- <img class="precio" src="../2100.png" alt="2100" srcset=""> -->
+        </div>
+      </div>
 
       <!-- infusiones -->
 
@@ -189,6 +218,20 @@
         </div>
         <div class="col-6 mt-5">
           <span class="text-black text-center pp p-5" id="jugogrande"></span>
+          <!-- precio -->
+        </div>
+        <div class="col-6 mt-5">
+          <p>ORANJE JUICE 1L</p>
+        </div>
+        <div class="col-6 mt-5">
+          <span class="text-black text-center pp p-5" id="naranja"></span>
+          <!-- precio -->
+        </div>
+        <div class="col-6 mt-5">
+          <p>LEMONADE</p>
+        </div>
+        <div class="col-6 mt-5">
+          <span class="text-black text-center pp p-5" id="limonada"></span>
           <!-- precio -->
         </div>
         <div class="col-6 mt-5">
