--- a/menu-pizzamigo-english/web/plato.html
+++ b/menu-pizzamigo-english/web/plato.html
@@ -209,7 +209,15 @@
         </div>
           <!-- Fin tabla -->
 
-
+          <div class="col-12 mt-5">
+            <h2 class="marco text-center">Children's menu</h2>
+          </div>
+          <div class="col-6">
+            <p>nuggets chicken with french fries or noodles</p>
+          </div>
+          <div class="col-6">
+            <span class="text-black text-center pp p-5" id="menuchicos"></span>
+          </div>
 
       <div class="col-12 mt-5">
         <h2 class="marco  text-center">Each Garnish <span id="guarnicion"></span></h2>
@@ -337,55 +345,7 @@
 
       <!-- fin sandwich -->
 
-      <div class="col-6"></div>
-      <div class="col-6 mt-5">
-        <h2 class="marco  text-center">PASTA</h2>
-      </div>
-      <!-- contenido Pastas -->
-      <div class="col-6 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/precio-sin-num.png" alt="precio" srcset="">
-      </div>
-      <div class="col-6 mt-5 text-end">
-        <p>Noodles</p>
-      </div>
-
-      <div class="col-6 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/precio-sin-num.png" alt="precio" srcset="">
-      </div>
-      <div class="col-6 mt-5 text-end">
-        <p>Ravioli</p>
-      </div>
-
-      <div class="col-6 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/precio-sin-num.png" alt="precio" srcset="">
-      </div>
-      <div class="col-6 mt-5 text-end">
-        <p>Sorrentinos</p>
-      </div>
-      <div class="col-6 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/precio-sin-num.png" alt="precio" srcset="">
-      </div>
-      <div class="col-6 mt-5 text-end">
-        <p>Agnolotti</p>
-      </div>
-      <div class="col-6 mt-5 ">
-        <img class="precio " src="../../menu-pizzamigo/precio-sin-num.png" alt="precio" srcset="">
-      </div>
-      <div class="col-6 mt-5 text-end">
-        <p>Gnocchi</p>
-      </div>
-      <!-- fin pastas -->
-      <!-- contenido salsas -->
-      <div class="col-12 mt-5">
-        <h2 class="marco  text-center">SAUCES</h2>
-      </div>
-
-      <div class="col-12 mt-5 ">
-        <p class=" text-start">Bolognesa Sauce.......</p>
-        <p class=" text-end">.......Mixed Sauce</p>
-        <p class=" text-start">Bechamel Sauce.......</p>
-        <p class=" text-end">........Fileto</p>
-        <p class=" text-start">Tomato Sauce...........</p>
+      
 
       </div>
 
