--- a/menu-pizzamigo-english/web/pizza.html
+++ b/menu-pizzamigo-english/web/pizza.html
@@ -55,12 +55,12 @@
       </div>
       <div class="row">
         <div class="col-6 d-flex justify-content-center">
-        <span class="text-black text-center pp p-5" id="pizzaMedio"></span>
+          <span class="text-black text-center pp p-5" id="pizzaMedio"></span>
 
           <!-- <img class="precio-metro" src="../../menu-pizzamigo/5000.png" alt="$3000" srcset=""> -->
         </div>
         <div class="col-6 d-flex justify-content-center">
-        <span class="text-black text-center pp p-5" id="pizzaMetro"></span>
+          <span class="text-black text-center pp p-5" id="pizzaMetro"></span>
 
           <!-- <img class="precio-metro" src="../../menu-pizzamigo/10000.png" alt="6000" srcset=""> -->
         </div>
@@ -193,6 +193,19 @@
         <div class="col-12 texto text-center text-light mt-5">
           <h3 class="marco">25.DIABOLA:</h3>
           <span class="">Tomato sauce-Mozzarella-Longaniza</span>
+
+        </div>
+      </div>
+
+      <!-- pizzeta -->
+
+      <div class="row mt-5">
+        <div class="col-6">
+          <p class="text-light marco text-center">PIZZETA</p>
+        </div>
+        <div class="col-6">
+
+          <span class="text-black text-center pp p-5" id="pizzeta"></span>
 
         </div>
       </div>
