--- a/menu-pizzamigo/web/pizza.html
+++ b/menu-pizzamigo/web/pizza.html
@@ -198,6 +198,19 @@
         </div>
       </div>
 
+      <!-- pizzeta -->
+
+      <div class="row mt-5">
+        <div class="col-6">
+          <p class="text-light marco text-center">PIZZETA</p>
+        </div>
+        <div class="col-6">
+
+          <span class="text-black text-center pp p-5" id="pizzeta"></span>
+
+        </div>
+      </div>
+
       <!-- pie de pagina -->
 
       <footer class="mt-5 container-fluid mb-5">
