--- a/menu-pizzamigo/web/pizza.html
+++ b/menu-pizzamigo/web/pizza.html
@@ -49,21 +49,25 @@
           <h3>1/2 METRO</h3>
 
         </div>
-
         <div class="col-6 texto text-center text-light mt-4">
-          <h3> 1 METRO</h3>
+          <h3>1 METRO</h3>
         </div>
       </div>
       <div class="row">
         <div class="col-6 d-flex justify-content-center">
           <span class="text-black text-center pp p-5" id="pizzaMedio"></span>
-
-          <!-- <img class="precio-metro" src="../5000.png" alt="$5000" srcset=""> -->
         </div>
+
         <div class="col-6 d-flex justify-content-center">
           <span class="text-black text-center pp p-5" id="pizzaMetro"></span>
+          
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 texto text-center text-light mt-4"><h3>PIZZETA</h3></div>
+        <div class="col-12 text-center mt-4">
+          <span class="text-black text-center pp p-5" id="pizzeta"></span>
 
-          <!-- <img class="precio-metro" src="../10000.png" alt="$10000" srcset=""> -->
         </div>
       </div>
       <div class="row text-start">
@@ -200,16 +204,7 @@
 
       <!-- pizzeta -->
 
-      <div class="row mt-5">
-        <div class="col-6">
-          <p class="text-light marco text-center">PIZZETA</p>
-        </div>
-        <div class="col-6">
 
-          <span class="text-black text-center pp p-5" id="pizzeta"></span>
-
-        </div>
-      </div>
 
       <!-- pie de pagina -->
 
