--- a/menu-pizzamigo-english/web/pizza.html
+++ b/menu-pizzamigo-english/web/pizza.html
@@ -64,6 +64,12 @@
 
           <!-- <img class="precio-metro" src="../../menu-pizzamigo/10000.png" alt="6000" srcset=""> -->
         </div>
+        <div class="row">
+          <div class="col-12 texto text-center text-light mt-4"><h3>PIZZETA</h3></div>
+          <div class="col-12 text-center mt-4">
+            <span class="text-black text-center pp p-5" id="pizzeta"></span>
+  
+          </div>
       </div>
       <div class="row text-start">
         <div class="col-12 text-center texto text-light mt-5">
@@ -197,18 +203,6 @@
         </div>
       </div>
 
-      <!-- pizzeta -->
-
-      <div class="row mt-5">
-        <div class="col-6">
-          <p class="text-light marco text-center">PIZZETA</p>
-        </div>
-        <div class="col-6">
-
-          <span class="text-black text-center pp p-5" id="pizzeta"></span>
-
-        </div>
-      </div>
 
       <!-- pie de pagina -->
 
